--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "react-native": "0.68.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-progress": "^5.0.0",
+    "react-native-root-siblings": "^4.1.1",
+    "react-native-root-toast": "^3.3.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
